--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,6 @@ jobs:
         # 仅同步静态列表，不会再动态获取需同步列表（黑白名单机制依旧生效）
         static_list: "hub-mirror-action"
         # 强制更新
-        force_update: true
+        #force_update: true
         # clone方式，使用http、ssh方式进行clone
-        clone_style: "http"
+        #clone_style: "http"
